Actualizacion para funcion de carga rapida y posicion automatica de visualizador.

--- a/QReg-Visualizador/App.config
+++ b/QReg-Visualizador/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
   <connectionStrings>
-    <add name="SQLCon" connectionString="server=DESKTOP-DSM3GN1\SQLEXPRESS;database=QReg;uid=sa;password=end1234" />
+    <add name="SQLCon" connectionString="server=DESKTOP-OK14MF7\SQLEXPRESS;database=QReg;uid=sa;password=end1234" />
   </connectionStrings>
   <appSettings>
     <add key="Alto" value="1075"/>
@@ -12,5 +12,19 @@
     <add key="Alto_Fila" value="215"/>
     <add key="Ancho_Columna_Turno" value="275" />
     <add key="Ancho_Columna_Puesto" value="500"/>
+    <!--
+    Habilita la posicion automatica de la ventana del visualizador.
+    #Ubicacion_Automatica_Activada valores posibles 1 (Activado) / 0 (Desactivado)
+    #Ubicacion_Automatica_Posicion valores posibles 1 (Derecha) / 0 (Izquierda)
+    -->
+    <add key="Ubicacion_Automatica_Activada" value ="0"/>
+    <add key="Ubicacion_Automatica_Posicion" value="1"/>
+    <!--
+    Habilita el inicio rapido, saltandose la seleccion de area de trabajo y mostrando la ventana del visualizador.
+    #Inicio_Rapido_Activado valores posibles 1 (Activado) / 0 (Desactivado)
+    #Inicio_Rapido_Area Chequear Ids en DB. 1 (Casa Central) / 2 (Consultorios Externos)
+    -->
+    <add key="Inicio_Rapido_Activado" value="0"/>
+    <add key="Inicio_Rapido_Area" value="2"/>
   </appSettings>
 </configuration>
